Security hardening, testing suite, and SOLID/KISS refactoring
Backend:
- OWASP fixes: rate limiting (LoginAttemptService), password complexity validator,
  account number format validation, CORS restricted headers, hardcoded secrets removed,
  proper HTTP status codes (403/404/422), SERIALIZABLE transfer isolation
- SOLID: extracted CurrentUserService (SRP/DRY), RequestUtils.getClientIp (SRP),
  AccountService.getOwnedAccountById shared ownership guard (KISS),
  AuthService delegates account creation to AccountService (SRP)
- Integration tests: AuthIntegrationTest, AccountIntegrationTest, TransactionIntegrationTest
  using H2 in-memory DB via application-integration.properties
- Unit test improvements: removed SecurityContextHolder boilerplate, cleaner mocks

Frontend:
- OWASP fixes: removed withFetch(), token expiry check in isLoggedIn(), debug console.log
  removed from interceptor, auth endpoints excluded from 401 auto-logout redirect
- Environment files added (environment.ts / environment.prod.ts); API URLs moved out of services
- NgZone + ChangeDetectorRef added to login/register for reliable change detection
- Cypress e2e tests: 32 tests across auth, dashboard, transfer, transactions
- SOLID/KISS: DashboardComponent.getEmail() delegates to AuthService (DRY)

CI/CD:
- backend.yml: JWT_SECRET and DB password injected from GitHub Secrets
- frontend.yml: added Cypress e2e job (cypress-io/github-action) with screenshot upload on failure
- docker-compose: frontend port changed from 4600→4201 (Hyper-V reserved port fix),
  CORS_ALLOWED_ORIGINS wired to backend